# home_ai

./: README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/home_ai/: __init__.py  agent_activities.py  agent_workflow.py  client_demo.py  config.py  main.py  main2.py  main3.py  main4.py  worker.py
src/home_ai/audio/: __init__.py  playback.py  recording.py
src/home_ai/chatbot/: __init__.py  client.py
src/home_ai/models/: __init__.py  transcription.py  tts_engine.py
